--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.h2.console.enabled=true
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 spring.jpa.defer-datasource-initialization=true
+
+security.secret-key=FRG9d9s#909Dksjh
+#//1H
+security.expire=3600000
+security.token-prefix=Bearer
